[gd_scene load_steps=3 format=3 uid="uid://settings001"]

[ext_resource type="Script" path="res://scripts/settings/settings.gd" id="1"]
[ext_resource type="Script" path="res://scripts/components/bg_text_flow.gd" id="bg_text_flow"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.95, 0.93, 0.88, 1)

[node name="TextFlow" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("bg_text_flow")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 60

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="LangLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22

[node name="LangButton" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 55)
theme_override_font_sizes/font_size = 22

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="BGColorLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22

[node name="ColorGrid" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 65)
theme_override_font_sizes/font_size = 24
